# parallel-algorithms

./: .gitignore
Ass1/: CMakeLists.txt  Hello_World  Makefile  README.md  bspsieve  bspsieve.cpp  bspsieve_class.cpp  bsptwinsieve.cpp  funcs.hpp  goldbach.hpp  hello.cpp  main  parallel_sieve.cpp  plots.py  seq_sieve.cpp  seq_sieve_2.cpp  seq_sieve_optimal.cpp  sieve.hpp  twins.hpp  utils.hpp
Ass2/: CMakeLists.txt  funcs.hpp  gen_input.cpp  getgraphs.ipynb  input  input_16  input_81  input_9  lattice_saw.cpp  loads_plots.py  mu_lim.py  plots.py  saw  saw.cpp  saw_graph.cpp  saw_seq.cpp  seq_saw.cpp  testing.cpp
Ass2_old/: CMakeLists.txt  funcs.hpp  gen_input.cpp  saw.cpp  toybalance.cpp
